# abhaile

./: .gitignore  .pre-commit-config.yaml  .renovaterc.json  .sops.yaml  .yamllint  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT_VALIDATION_PLAN.md  INVENTORY.md  Makefile  README.md  REVIEW.md  TODO.md  design-spec.md  paths.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.agents/: architect.md  code-reviewer.md  developer.md  sysadmin.md  technical-writer.md
.codex/agents/: architect.toml  code-reviewer.toml  developer.toml  sysadmin.toml  technical-writer.toml
.github/: copilot-instructions.md  pull_request_template.md
.github/agents/: architect.agent.md  code-reviewer.agent.md  developer.agent.md  sysadmin.agent.md  technical-writer.agent.md
.github/workflows/: ci.yml  nightly.yml
.kiro/agents/: architect.json  code-reviewer.json  developer.json  sysadmin.json  technical-writer.json
abhaile/: cli.py
abhaile/apply/: __init__.py  manifest.py
abhaile/dns/: placeholders.py  records.py  renderer.py  serial_validator.py
abhaile/renderers/: config.py  ingress.py  manifest.py  networkd.py  software.py  users.py
abhaile/types/: __init__.py
abhaile/utils/: __init__.py  composition.py  config.py  network.py  paths.py  placeholders.py  templating.py
abhaile/validation/: dns.py  users.py
config/: mapping.yaml  network.yaml
containers/: camera.network  general.network  management.network
containers/caddy/: Containerfile  caddy-caddyfile.volume  caddy-config.volume  caddy-data.volume  caddy-site.volume  caddy.build  caddy.container
containers/core-dns/: .env  core-dns.container  core-dns.image
containers/frigate/: frigate.container
containers/home-assistant/: home-assistant-config.volume  home-assistant.container  home-assistant.image
containers/networks/: gaming.network  iot.network  secure.network
containers/omada-controller/: .env  omada-controller-data.volume  omada-controller-logs.volume  omada-controller.container  omada-controller.image
ddns/: ddclient.conf  update_public_ip.sh
docs/: ADDING-A-SERVICE.md  APPLY.md  ARCHITECTURE.md  BOOTSTRAP.md  BREAK-GLASS.md  CREDENTIALS.md  DEVELOPMENT.md  INVENTORY.md  MAINTENANCE.md  NETWORK.md  OPERATIONS.md  OPERATOR_RUNBOOK.md  QUICKSTART.md  README.md  SECRETS.md  TESTING.md
docs/ADR/: 0001-host-level-gitops.md  0002-service-addressing-ipvlan.md  0003-dns-split-horizon.md  0004-secrets-sops-vault.md  0005-podman-quadlets.md  0006-networkd-service-dropins.md  0007-atomic-host-apply.md  0008-dual-caddy-authelia-ingress.md  0009-secrets-decryption-boundary.md  0010-gitops-privilege-boundary.md
docs/adr/: 0000-adr-template.md  0001-output-root-and-environment-paths.md  0002-hash-based-drift-detection-and-state-model.md  0003-gitops-runner-responsibility-boundary.md  0004-apply-execution-model.md  0005-service-authoring-model.md  0006-secrets-model-and-bootstrap-artifacts.md  0007-sops-bootstrap-policy-and-layout.md  0008-host-infrastructure-authoring-model.md  0009-vault-agent-approle-auto-auth.md  008-public-helper-apis.md  README.md
docs/guides/: adding-a-kind.md  adding-a-service.md  bootstrap.md  testing.md
docs/reference/: apply.md  secrets.md
docs/runbooks/: break-glass.md  operations.md
docs/specs/: GOVERNANCE.md  README.md  _template.md
out_bak/state/: desec_plan.json
policies/: README.md  admins.hcl
schemas/: common.schema.json  host.schema.json  mapping.schema.json  network.schema.json  service.schema.json  software-action.schema.json
scripts/: abhaile-runner  bootstrap.sh  paths.ini  render  sops-bootstrap
secrets/: README.md  caddy-dmz-desec.sops.yaml.example  vault-agent-approle-deimos.sops.env  vault-agent-approle-phobos.sops.env  vault-unseal.sops.yaml
systemd/: abhaile-gitops-apply@.path  abhaile-gitops-apply@.service  abhaile-gitops@.service  abhaile-gitops@.timer  abhaile-vault-token-refresh@.service  abhaile-vault-token-refresh@.timer  abhaile-vault-unseal.service.j2
systemd_network/: 10-enp0s31f6.network  21-enp0s31f6.1.netdev  22-enp0s31f6.20.netdev.disabled  23-enp0s31f6.30.netdev  24-enp0s31f6.40.netdev  25-enp0s31f6.50.netdev  26-enp0s31f6.60.netdev  31-enp0s31f6.1.network  32-enp0s31f6.20.network.disabled  33-enp0s31f6.30.network  34-enp0s31f6.40.network  35-enp0s31f6.50.network  36-enp0s31f6.60.network
tests/: README.md  conftest.py
tools/: README.md  paths.ini
(+698 files in other folders)
