[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abhaile"
version = "0.1.0"
description = "GitOps configuration management for Debian hosts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Jinja2>=3.0",
    "jsonschema>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.14.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
abhaile-render = "abhaile.cli.render:main"
abhaile-apply = "abhaile.cli.apply:main"
abhaile-diff = "abhaile.cli.diff:main"
abhaile-inventory = "abhaile.cli.inventory:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["abhaile*"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
files = ["src/abhaile", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/abhaile",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-branch",
    "--cov-fail-under=85",
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may do I/O)",
    "slow: Slow tests (git operations, etc.)",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-module = false
ignore-nested-functions = false
ignore-private = true
ignore-property-decorators = false
ignore-semiprivate = false
fail-under = 90
exclude = ["setup.py", "docs", "build"]
verbose = 1
quiet = false
whitelist-regex = []
color = true

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "UP006"]
ignore = ["E501"]
